gccida/c2/gen_sequence
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_sequence/src/emit-rtl.c:5051:4: error: expected ';' after expression
rtx result; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_sequence/src/emit-rtl.c:5051:5: error: use of undeclared identifier 'result'
rtx result; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_sequence/src/emit-rtl.c:5052:4: error: expected ';' after expression
rtx v5; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_sequence/src/emit-rtl.c:5052:5: error: use of undeclared identifier 'v5'
rtx v5; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_sequence/src/emit-rtl.c:5070:14: error: expected ';' after return statement
return ( rtx)x_first_insn[2]; 
             ^
             ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_sequence/src/emit-rtl.c:5074:1: error: use of undeclared identifier 'result'
result = gen_rtx_fmt_E( SEQUENCE, VOIDmode, v3); 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_sequence/src/emit-rtl.c:5075:1: error: use of undeclared identifier 'v5'
v5 = cfun->emit->x_first_insn; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_sequence/src/emit-rtl.c:5076:6: error: use of undeclared identifier 'v5'
if ( v5 ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_sequence/src/emit-rtl.c:5081:15: error: use of undeclared identifier 'result'
*( _QWORD *)( result->fld[0].rtwint + v6) = v5; 
              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_sequence/src/emit-rtl.c:5081:45: error: use of undeclared identifier 'v5'
*( _QWORD *)( result->fld[0].rtwint + v6) = v5; 
                                            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_sequence/src/emit-rtl.c:5082:1: error: use of undeclared identifier 'v5'
v5 = v5[1].fld[0].rtx; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_sequence/src/emit-rtl.c:5082:6: error: use of undeclared identifier 'v5'
v5 = v5[1].fld[0].rtx; 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_sequence/src/emit-rtl.c:5085:9: error: use of undeclared identifier 'v5'
while ( v5 ); 
        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_sequence/src/emit-rtl.c:5087:8: error: use of undeclared identifier 'result'
return result; 
       ^
14 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_sequence/src/obj/emit-rtl.o] Error 1
